# r4w

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  MISSING_FEATURES.md  Makefile  OVERVIEW.md  PROMPT_HISTORY.md  README.md  THIRD_PARTY.md  docker-compose.yml  e1c_60s_all_prns.yaml  e1c_60s_clean.yaml  e1c_60s_cn34.yaml  e1c_60s_cn34_effects.yaml  e1c_8prn_20s_clean.yaml  e1c_8prn_20s_cn34_orbital.yaml  e1c_8prn_600s_cn34_orbital.yaml  e1c_8prn_60s_cn34_orbital.yaml  e1c_8prn_60s_mach3_ftwayne_berne.yaml  e1c_prn3_20s_30ms_delay.yaml  e1c_prn3_20s_withdoppler.yaml  requirements.yaml
crates/r4w-core/: Cargo.toml
crates/r4w-core/benches/: dsp_bench.rs  gnuradio_comparison.rs  hop_timing_bench.rs  latency_bench.rs  pagefault_bench.rs  parallel_bench.rs  ringbuffer_bench.rs  rt_jitter_bench.rs
crates/r4w-core/examples/: export_galileo_code.rs
crates/r4w-core/src/: abs_blk.rs  acars_decoder.rs  access_code_detector.rs  acoustic_beamformer_adaptive.rs  acoustic_echo_canceller.rs  acoustic_emission_sensor.rs  acoustic_gunshot_localizer.rs  acoustic_impedance_tomographer.rs  acoustic_leak_locator.rs  adaptive_eigenvalue_tracker.rs  adaptive_filter_rls.rs  adaptive_interference_canceller.rs  adaptive_modcod.rs  adaptive_notch.rs  adaptive_nulling_beamformer.rs  adaptive_power_controller.rs  add_blk.rs  additive_scrambler.rs  adpcm_codec.rs  aes_stream_cipher.rs  afc.rs  agc.rs  agc_attack_decay.rs  ais_decoder.rs  ais_encoder.rs  alamouti_codec.rs  am_demod.rs  ambient_backscatter_processor.rs  ambiguity_function.rs  antenna_array_response.rs  antenna_design_optimizer.rs  antenna_diversity_combiner.rs  anti_jam.rs  aprs_decoder.rs  arbitrary_resampler.rs  argmax.rs  arithmetic.rs  arq_engine.rs  automatic_modulation_classifier.rs  automotive_radar_tracker.rs  (+632 more)
crates/r4w-core/src/agent/: client.rs  mod.rs  protocol.rs  server.rs
crates/r4w-core/src/analysis/: mod.rs
crates/r4w-core/src/benchmark/: metrics.rs  mod.rs  receiver.rs  report.rs  runner.rs
crates/r4w-core/src/fec/: convolutional.rs  mod.rs  polar.rs  reed_solomon.rs
crates/r4w-core/src/filters/: adaptive.rs  cic.rs  fir.rs  fractional_resampler.rs  iir.rs  mod.rs  moving_average.rs  polyphase.rs  pulse_shaping.rs  remez.rs  traits.rs  windows.rs
crates/r4w-core/src/io/: format.rs  mod.rs
crates/r4w-core/src/mesh/: crypto.rs  meshtastic.rs  mod.rs  packet.rs  store_forward.rs
crates/r4w-core/src/mesh/proto/: messages.rs  mod.rs  portnum.rs
crates/r4w-core/src/mesh/wire/: analyzer.rs  header.rs  mod.rs
crates/r4w-core/src/observe/: capture.rs  logging.rs  metrics.rs  mod.rs
crates/r4w-core/src/plugin/: abi.rs  manager.rs  mod.rs
crates/r4w-core/src/rt/: alloc_audit.rs  latency.rs  mod.rs  pool.rs  ringbuffer.rs  stats.rs  thread.rs
crates/r4w-core/src/spreading/: barker.rs  gold.rs  lfsr.rs  mod.rs
crates/r4w-core/src/waveform/: adsb.rs  ale.rs  ale3g.rs  am.rs  ask.rs  beacon.rs  cw.rs  dmr.rs  dsss.rs  fhss.rs  fhss_antijam.rs  fm.rs  fmcw.rs  fsk.rs  lora.rs  milstd188110.rs  mod.rs  ofdm.rs  ook.rs  p25.rs  ppm.rs  psk.rs  qam.rs  stanag4285.rs  tetra.rs  uwb.rs  zigbee.rs
crates/r4w-core/src/waveform/gnss/: acquisition.rs  boc.rs  cddis.rs  ephemeris.rs  galileo_e1.rs  galileo_e1_codes.rs  glonass_l1of.rs  gps_l1ca.rs  gps_l5.rs  ionex.rs  mod.rs  nav_message.rs  prn.rs  satellite_emitter.rs  scenario.rs  scenario_config.rs  sp3.rs  tracking.rs  types.rs
crates/r4w-core/src/waveform/havequick/: builder.rs  framework.rs  mod.rs  simulator.rs  traits.rs  types.rs
crates/r4w-core/src/waveform/link16/: builder.rs  framework.rs  mod.rs  simulator.rs  traits.rs  types.rs
crates/r4w-core/src/waveform/sincgars/: audio.rs  builder.rs  data.rs  framework.rs  mod.rs  simulator.rs  traits.rs  types.rs
crates/r4w-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/r4w-ffi/include/: r4w.h  r4w.hpp
crates/r4w-ffi/src/: lib.rs
crates/r4w-fpga/: Cargo.toml
crates/r4w-fpga/src/: error.rs  lib.rs  traits.rs  types.rs
crates/r4w-fpga/src/lattice/: config.rs  ftdi.rs  mod.rs  spi.rs
crates/r4w-fpga/src/sim/: mod.rs
crates/r4w-fpga/src/zynq/: config.rs  dma.rs  mmap.rs  mod.rs  registers.rs  uio.rs
crates/r4w-gui/: Cargo.toml
crates/r4w-gui/src/: app.rs  lib.rs  main.rs
crates/r4w-gui/src/platform/: mod.rs  native.rs  web.rs
crates/r4w-gui/src/streaming/: manager.rs  mod.rs  ring_buffer.rs  types.rs  udp.rs  waterfall.rs
crates/r4w-gui/src/views/: adsb.rs  ale.rs  block_metadata.rs  chirp.rs  constellation.rs  demod.rs  fhss.rs  generic_demod.rs  generic_mod.rs  generic_pipeline.rs  gnss_simulator.rs  mod.rs  modulation.rs  overview.rs  performance.rs  pipeline.rs  pipeline_wizard.rs  remote_lab.rs  spectrum.rs  stanag.rs  streaming.rs  udp_benchmark.rs  waveform.rs  waveform_comparison.rs  waveform_wizard.rs
crates/r4w-gui/src/views/code_explorer/: am_snippets.rs  css_snippets.rs  cw_snippets.rs  dsss_snippets.rs  fhss_snippets.rs  fm_snippets.rs  fmcw_snippets.rs  fsk_snippets.rs  highlight.rs  mod.rs  ofdm_snippets.rs  (+7 more)
crates/r4w-web/: Cargo.toml  Trunk.toml  index.html
crates/r4w-web/src/: lib.rs
csi/csi-backend-hw/: Cargo.toml
csi/csi-backend-hw/src/: lib.rs
csi/csi-backend-soft/: Cargo.toml
csi/csi-backend-soft/src/: lib.rs
csi/csi-core/: Cargo.toml
csi/csi-core/src/: lib.rs
csi/csi-queues/: Cargo.toml
csi/csi-queues/src/: lib.rs
examples/c/: CMakeLists.txt  fft_demo.c
workshop/: Cargo.toml
workshop/advanced/: README.md
workshop/advanced/exercises/: 10_dsp_basics.rs  20_psk_modem.rs  30_symbol_timing.rs  50_crc_basics.rs  70_ber_testing.rs  80_waveform_trait.rs
workshop/getting_started/: basic_modulation.rs  channel_simulation.rs  lora_basics.rs  mesh_simulation.rs  sigmf_recording.rs  waveform_comparison.rs
workshop/src/: lib.rs
workshop/usrp/: README.md
workshop/usrp/configs/: b200_mini.yaml  loopback_test.yaml  n210.yaml
workshop/usrp/exercises/: 01_device_discovery.rs  02_basic_rx.rs  03_basic_tx.rs  04_loopback.rs  05_lora_tx.rs  06_lora_rx.rs  07_over_the_air.rs  08_timing_sync.rs  09_sensitivity_test.rs
(+203 files in other folders)
