[package]
name = "r4w-gui"
description = "R4W Explorer - Rust for Waveforms visualization application"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "r4w_gui"
path = "src/lib.rs"

[[bin]]
name = "r4w-explorer"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]

# Native desktop features
native = [
    "dep:rfd",
    "dep:open",
    "dep:tracing-subscriber",
]

# Web/WASM features
web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:console_log",
    "dep:console_error_panic_hook",
]

[dependencies]
# Core dependencies (always included)
r4w-core = { path = "../r4w-core", features = ["parallel"] }
r4w-sim = { path = "../r4w-sim" }

# Parallel processing
rayon = { workspace = true }

eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }

num-complex = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# For reading IQ files
byteorder = "1.5"

# Cross-platform time (works in WASM)
web-time = "1.1"

# Native-only dependencies
tracing-subscriber = { workspace = true, optional = true }
open = { version = "5", optional = true }
rfd = { version = "0.15", optional = true }

# Web-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Location",
    # For window.open() to open URLs in new tabs
] }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
log = "0.4"

[dev-dependencies]
approx = { workspace = true }
