[package]
name = "csi-core"
version = "0.1.0"
edition = "2021"
description = "Crypto Service Interface core types and flow management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/r4w"
readme = "../README.md"

[features]
default = []
std = []

[dependencies]
# Future: heapless, no allocations
# heapless = "0.8"
